<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
-->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:gravity="center_vertical|center_horizontal|center"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardCornerRadius="3dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="false">

    <ImageView
        android:id="@+id/perfilHero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@color/cardview_shadow_end_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryText">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textColor="@color/colorName" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
<!--
</LinearLayout>
-->